--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -126,6 +126,7 @@
       }
     {% endstyle %}
 
+    {{ 'base-typography.css' | asset_url | stylesheet_tag }}
     {{ 'theme.css' | asset_url | stylesheet_tag }}
     {{ 'theme-enhanced.css' | asset_url | stylesheet_tag }}
     {{ 'contact-page.css' | asset_url | stylesheet_tag }}
@@ -133,6 +134,11 @@
     {%- if template.name == 'collection' -%}
       {{ 'collection-premium.css' | asset_url | stylesheet_tag }}
       <script src="{{ 'collection-premium.js' | asset_url }}" defer="defer"></script>
+    {%- endif -%}
+
+    {%- if template.name == 'page' and template.suffix == 'products' -%}
+      {{ 'products-gallery.css' | asset_url | stylesheet_tag }}
+      <script src="{{ 'products-gallery.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
 
     <script>
