--- a/sections/cart-items.liquid
+++ b/sections/cart-items.liquid
@@ -6,7 +6,11 @@
   <div class="page-width">
     <h1 class="cart-items__title h2">{{ 'sections.cart.title' | t }}</h1>
 
-    <form action="{{ routes.cart_url }}" method="post" class="cart-items__form" id="cart">
+    <form
+      action="{{ routes.cart_url }}"
+      method="post"
+      class="cart-items__form"
+      id="cart">
       {%- if cart.item_count > 0 -%}
         <div class="cart-items__table">
           <div class="cart-items__header">
@@ -19,7 +23,10 @@
           </div>
 
           {%- for item in cart.items -%}
-            <div class="cart-item" data-cart-item data-line="{{ forloop.index }}">
+            <div
+              class="cart-item"
+              data-cart-item
+              data-line="{{ forloop.index }}">
               <div class="cart-item__media">
                 {%- if item.image -%}
                   <img
@@ -27,8 +34,7 @@
                     alt="{{ item.image.alt | escape }}"
                     width="150"
                     height="150"
-                    loading="lazy"
-                  >
+                    loading="lazy">
                 {%- endif -%}
               </div>
 
@@ -52,12 +58,19 @@
               </div>
 
               <div class="cart-item__price">
-                {% render 'price', product: item, use_variant: true %}
+                {% render 'price'
+                  , product: item
+                  , use_variant: true %}
               </div>
 
               <div class="cart-item__quantity">
                 <div class="quantity-selector">
-                  <button class="quantity-selector__button" type="button" name="minus" data-quantity-minus aria-label="{{ 'products.product.quantity_decrease' | t }}">
+                  <button
+                    class="quantity-selector__button"
+                    type="button"
+                    name="minus"
+                    data-quantity-minus
+                    aria-label="{{ 'products.product.quantity_decrease' | t }}">
                     {% render 'icon-minus' %}
                   </button>
                   <input
@@ -68,9 +81,13 @@
                     min="0"
                     data-quantity-input
                     data-line="{{ forloop.index }}"
-                    aria-label="{{ 'products.product.quantity_label' | t }}"
-                  >
-                  <button class="quantity-selector__button" type="button" name="plus" data-quantity-plus aria-label="{{ 'products.product.quantity_increase' | t }}">
+                    aria-label="{{ 'products.product.quantity_label' | t }}">
+                  <button
+                    class="quantity-selector__button"
+                    type="button"
+                    name="plus"
+                    data-quantity-plus
+                    aria-label="{{ 'products.product.quantity_increase' | t }}">
                     {% render 'icon-plus' %}
                   </button>
                 </div>
@@ -81,8 +98,35 @@
               </div>
 
               <div class="cart-item__remove-wrapper">
-                <button type="button" class="cart-item__remove" data-cart-remove data-line="{{ forloop.index }}" aria-label="{{ 'sections.cart.remove_title' | t: title: item.title }}">
-                  {{ 'sections.cart.remove' | t }}
+                <button
+                  type="button"
+                  class="cart-item__remove"
+                  data-cart-remove
+                  data-line="{{ forloop.index }}"
+                  aria-label="{{ 'sections.cart.remove_title' | t: title: item.title }}">
+                  <svg
+                    width="20"
+                    height="20"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <path d="M3 6h18" />
+                    <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6" />
+                    <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2" />
+                    <line
+                      x1="10"
+                      y1="11"
+                      x2="10"
+                      y2="17" />
+                    <line
+                      x1="14"
+                      y1="11"
+                      x2="14"
+                      y2="17" />
+                  </svg>
                 </button>
               </div>
             </div>
@@ -101,17 +145,17 @@
 </div>
 
 {% schema %}
-{
-  "name": "Cart Items",
-  "tag": "section",
-  "class": "section-cart-items",
-  "settings": [
-    {
-      "type": "checkbox",
-      "id": "show_vendor",
-      "label": "Show vendor",
-      "default": false
-    }
-  ]
-}
+  {
+    "name": "Cart Items",
+    "tag": "section",
+    "class": "section-cart-items",
+    "settings": [
+      {
+        "type": "checkbox",
+        "id": "show_vendor",
+        "label": "Show vendor",
+        "default": false
+      }
+    ]
+  }
 {% endschema %}
